game-main/tests/snapshots/snapshots__0004_function not implemented on non-wasm32 targets.snap
---
source: game-main/tests/snapshots.rs
expression: game
---
  0: 6
* 1: 0

    0   1   2   3   4   5   6   7
0:|   |   |   |   |   |   |   |   |
1:|   |   |   |   |   |   |   |   |
2:|   |   |   |   |   |   |   |   |
3:|   |   |   |   |   |   |   |   |
4:|   |   |   |   |   |   |   |   |
5:|   |   |   |   |   |   |   |   |
6:|   |   |   |   |   |   |   |   |
7:|   |   |   |   |   |   |   |   |
