game-main/tests/snapshots/snapshots__0005_Cannot undo next turn.snap
---
source: game-main/tests/snapshots.rs
expression: game
---
* 0: 7
  1: 8

    0   1   2   3   4   5   6   7
0:|   |   |   |   |   |   |   |   |
1:|   |   |   |   |   |   |   |   |
2:|   |   |   | 0-|   |   |   | 1o|
3:|   |   |   |   |   |   |   |   |
4:|   |   |   |   |   |   |   |   |
5:|   |   |   |   |   | 1o|   |   |
6:|   |   |   |   |   |   |   |   |
7:|   |   |   |   |   |   |   |   |
