game-main/tests/snapshots/snapshots__all_snapshots-2.snap
---
source: game-main/tests/snapshots.rs
expression: game
---
* 0: 7
  1: 7

    0   1   2   3   4   5   6   7
0:|   |   |   |   |   |   |   |   |
1:|   |   |   |   |   |   |   |   |
2:|   |   | 0o|   |   |   |   |   |
3:|   |   |   |   |   |   |   |   |
4:|   |   |   |   |   |   |   |   |
5:|   |   |   |   |   | 1o|   |   |
6:|   |   |   |   |   |   |   |   |
7:|   |   |   |   |   |   |   |   |


