game-main/tests/snapshots/snapshots__snapshot.snap
---
source: game-main/tests/snapshots.rs
expression: game
---
  0: 7
* 1: 3

    0   1   2   3   4   5   6   7
0:|   |   |   |   |   |   |   |   |
1:|   |   |   |   |   |   |   |   |
2:|   |   |   | 0-|   |   |   |   |
3:|   |   |   |   |   |   |   |   |
4:|   |   |   |   |   |   |   |   |
5:|   |   |   |   |   | 1x|   |   |
6:|   |   |   |   |   |   |   |   |
7:|   |   |   |   |   |   |   |   |


